# CFD_inWSL

CongFD1.0/: AccuracyTest.cpp  CMakeLists.txt  interScheme.hpp  zoneMain.cpp
CongFD1.0/batch_processing/: README.md  info_2D_Riemann_1_401x401_WENO-JS.txt  info_2D_Riemann_1_TENO-Z-myA.txt  info_2D_Riemann_2_801x801_TENO-AS-myF202-2S.txt  info_2D_Riemann_2_801x801_TENO-AS-myF203-NoS.txt  info_2D_Riemann_2_801x801_TENO-S.txt  info_2D_Riemann_2_801x801_TENO-myA.txt  info_2D_Riemann_2_801x801_WENO-JS.txt  info_2D_Riemann_2_vortex_TENO-Z-myA.txt  info_2D_Riemann_3_801x801_TENO-AS-myF202-NoS.txt  info_2D_Riemann_3_801x801_TENO-Z-myA.txt  info_2D_Riemann_3_801x801_TENO-Z-myASF002.txt  info_2D_Riemann_3_801x801_TENO-Z-myASF102.txt  info_2D_Riemann_3_801x801_WENO-JS.txt  info_DM_801x201_TENO-AS-myF102.txt  info_DM_801x201_TENO-AS-myF202-2S.txt  info_RTI_101x401_WENO-Z.txt  info_implosion_401x401_TENO-AS-myF202-NoS.txt  info_implosion_401x401_TENO-S.txt  info_implosion_401x401_TENO-myA.txt  info_implosion_401x401_TENO.txt  info_implosion_401x401_WENO-JS.txt  info_implosion_401x401_WENO-Z.txt  run_all_cases.sh
CongFD1.0/batch_processing_data/: Lax_WCNS5CONGZ.cgns  Lax_WCNS5CONGZ_time.txt
CongFD1.0/batch_processing_txt/1D/: info_Lax_TENO-Z-myA.txt  info_Lax_TENO-Z-myASF002.txt  info_Lax_TENO-Z-myASF102.txt  info_ShuOsher_TENO-Z-S.txt  info_Sod_TENO-Z-myA.txt  info_Sod_WENO-JS.txt
CongFD1.0/batch_processing_txt/2D/: info_2D_Riemann_1_TENO-Z-myA.txt  info_2D_Riemann_1_TENO-Z.txt  info_2D_Riemann_1_WENO-Z.txt  info_RTI_TENO-Z-myASF002.txt
CongFD1.0/cases/: EULERWCNS5t=0.0000.cgns  EULERWCNS5t=0.0100.cgns  EULERWCNS5t=0.0200.cgns  EULERWCNS5t=0.0300.cgns  EULERWCNS5t=0.0400.cgns  EULERWCNS5t=0.0500.cgns  EULERWCNS5t=0.0600.cgns  EULERWCNS5t=0.0700.cgns  EULERWCNS5t=0.0800.cgns  EULERWCNS5t=0.0900.cgns  EULERWCNS5t=0.1000.cgns  EULERWCNS5t=0.1100.cgns  EULERWCNS5t=0.1200.cgns  EULERWCNS5t=0.1300.cgns  EULERWCNS5t=0.1400.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0000.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0100.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0200.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0300.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0400.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0500.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0600.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0700.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0800.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.0900.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.1000.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.1100.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.1200.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.1300.cgns  Lax - TENO-AS-myF203_NoS - 201 - t=0.1400.cgns  Lax - TENO-AS-myF203_NoS - 201.txt  RTI - TENO-AS-myF202_2S - 101x401 - t=0.0000.cgns  RTI - WHFTCNSA - 65x257 - t=0.0000.cgns  RTI - WHFTCNSA - 65x257 - t=1.9500.cgns  RTI - WHFTCNSAF002 - 65x257 - t=0.0000.cgns  RTI - WHFTCNSAF002 - 65x257 - t=1.9500.cgns  timeInfo.txt
CongFD1.0/release/: CMakeCache.txt  Makefile  cmake_install.cmake  timeInfo.txt
CongFD1.0/release/NICEST/: timeInfo.txt  untitled.lay
CongFD1.0/release/src/: Makefile  cmake_install.cmake
CongFD1.0/release/utils/: Makefile  cmake_install.cmake
CongFD1.0/src/include/: 000_globals.hpp  Bnds.hpp  SpaceDis.hpp  block.hpp  blockSolver.hpp  cgnsio.hpp  data.hpp  differ.hpp  eigenSystem.hpp  equation.hpp  fluxScheme.hpp  fluxSolver.hpp  info.hpp  interScheme.hpp  macro.hpp  oneDBnd.hpp  reconstructor.hpp  sp_distributor.hpp
CongFD1.0/src/src/: SpaceDis.cpp  block.cpp  blockSolver.cpp  bnds.cpp  cgnsio.cpp  data.cpp  eigenSystem.cpp  info.cpp  initializer.cpp  macro.cpp  oneDBnd.cpp  reconstructor.cpp  sp_circularBuffer.cpp  sp_difference.cpp  sp_distributor.cpp  sp_flux.cpp  sp_recon.cpp
CongFD1.0/utils/exactSolBurgers/: CMakeLists.txt  main2.cpp
CongFD1.0/utils/roefluxtest/: CMakeLists.txt  main.cpp
CongFD1.0/utils/toTec1D/: CMakeLists.txt
TOOLS/zyc_linear_advect/: CMakeLists.txt
TOOLS/zyc_linear_advect/Doxygen/: Doxyfile_mum
TOOLS/zyc_linear_advect/include/: 000_globals.h  flux_schemes.H  header.H
TOOLS/zyc_linear_advect/src/: with_time.cpp  without_time.cpp
tools_CFD/zyc_linear_advect - 结构化/: CMakeLists.txt
tools_CFD/zyc_linear_advect - 结构化/include/: flux_schemes.H  header.H
tools_CFD/zyc_linear_advect - 结构化/src/: with_time.cpp  without_time.cpp
zone_FD/: CMakeLists.txt  info.txt  zoneMain.cpp
zone_FD/Doxygen/: Doxyfile_mum
zone_FD/Doxygen/html/: 000__statistics___c_t_a_8hpp.html  000__statistics___c_t_a_8hpp__dep__incl.map  000__statistics___c_t_a_8hpp__dep__incl.md5  000__statistics___c_t_a_8hpp__incl.map  000__statistics___c_t_a_8hpp__incl.md5  000__statistics___c_t_a_8hpp_a206fa9c45e3b83e3a573c37977694320_icgraph.map  000__statistics___c_t_a_8hpp_a206fa9c45e3b83e3a573c37977694320_icgraph.md5  000__statistics___c_t_a_8hpp_source.html  _euler_equation1_d_8cpp.html  _euler_equation1_d_8cpp_source.html  _euler_equation1_d_8hpp.html  _euler_equation1_d_8hpp_source.html  _r_e_a_d_m_e_8md.html  _source_term_8hpp.html  _source_term_8hpp__dep__incl.map  _source_term_8hpp__dep__incl.md5  _source_term_8hpp__incl.map  _source_term_8hpp__incl.md5  _source_term_8hpp_source.html  _space_dis_8cpp_8o_8d.html  _space_dis_8cpp_8o_8d_source.html  annotated.html  block_8cpp.html  block_8cpp_8o_8d.html  block_8cpp_8o_8d_source.html  block_8cpp__incl.map  block_8cpp__incl.md5  block_8cpp_source.html  block_8hpp.html  block_8hpp__dep__incl.map  block_8hpp__dep__incl.md5  block_8hpp__incl.map  block_8hpp__incl.md5  (+1447 more)
zone_FD/cases/: EULERWCNS5t=0.0000.cgns  Sod - congTCNS5CT5 - 101 - t=0.0000.cgns  Sod - congTCNS5CT5 - 101 - t=0.1000.cgns  Sod - congTCNS5CT5 - 101 - t=0.2000.cgns  Sod - congTCNS5CT5 - 101.txt  Sod - whfzycTCNSNmyASF002_1 - 101 - t=0.0000.cgns  Sod - whfzycTCNSNmyASF002_1 - 101 - t=0.1000.cgns  Sod - whfzycTCNSNmyASF002_1 - 101 - t=0.2000.cgns  Woodward_Colella - whfCOMPARE - 401 - t=0.0000.cgns  Woodward_Colella - whfzycTCNSNmyASF002_1 - 401 - t=0.0000.cgns  Woodward_Colella - whfzycTCNSNmyASF002_1 - 401 - t=0.0380.cgns  solver_log.txt  timeInfo.txt
(+3306 files in other folders)
